# autosum

./: README.md  pyproject.toml
autosum/: summarize.py
