[tool.poetry]
name = "autosum"
version = "0.1.0"
description = "Summarize documents from you CLI"
authors = ["Jiri Podivin <jpodivin@redhat.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.37.2"
torch = "^2.2.0"
pypdf = "^4.0.1"
rapidocr-onnxruntime = "^1.3.17"
langchain-community = "^0.0.34"
gpt4all = "^2.5.1"
faiss-cpu = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
retrieve = "autosum.summarize:main"

